tests/fixtures/spawn_wait_status_pid.stderr
Error in tests/fixtures/spawn_wait_status_pid.sh2:3:9
Error in unknown
Error in unknown
